--- a/bitsharesqt/mainwindow.ui
+++ b/bitsharesqt/mainwindow.ui
@@ -2278,7 +2278,11 @@ image: &quot;&quot;;
               </widget>
              </item>
              <item row="3" column="1">
-              <widget class="QPlainTextEdit" name="transferMemo"/>
+              <widget class="QPlainTextEdit" name="transferMemo">
+               <property name="placeholderText">
+                <string>Optional message.</string>
+               </property>
+              </widget>
              </item>
              <item row="4" column="0">
               <widget class="QLabel" name="transferFeeLabel">
