--- a/bitsharesqt/exchange.ui
+++ b/bitsharesqt/exchange.ui
@@ -77,7 +77,7 @@
           </size>
          </property>
          <property name="editable">
-          <bool>false</bool>
+          <bool>true</bool>
          </property>
         </widget>
        </item>
