--- a/bitsharesqt/mainwindow.ui
+++ b/bitsharesqt/mainwindow.ui
@@ -10,6 +10,9 @@
     <height>759</height>
    </rect>
   </property>
+  <property name="acceptDrops">
+   <bool>true</bool>
+  </property>
   <property name="windowTitle">
    <string>bitshares-qt</string>
   </property>
